# 7-Days-to-die-server-manager-gui

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: make_icon.py
packaging/: PKGBUILD  build-appimage.sh  sdtd-server-manager.desktop  sdtd-server-manager.service
src/: admin.rs  api.rs  backup.rs  config.rs  dialog_focus.rs  firewall.rs  main.rs  mods.rs  netinfo.rs  paths.rs  scheduler.rs  seed.rs  server.rs  settings.rs  state.rs  static_files.rs  telnet.rs  upnp.rs  worlds.rs
static/: app.js  index.html  style.css
