[package]
name = "sdtd-server-manager"
version = "0.1.0"
edition = "2021"
description = "A web-based dedicated server manager for 7 Days to Die"
authors = ["You"]
license = "MIT"

[dependencies]
axum             = { version = "0.7",  features = ["macros", "multipart"] }
tokio            = { version = "1",    features = ["full"] }
tokio-util       = { version = "0.7",  features = ["io"] }
tower-http       = { version = "0.5",  features = ["cors", "trace"] }
serde            = { version = "1",    features = ["derive"] }
serde_json       = "1"
quick-xml        = "0.31"
anyhow           = "1"
thiserror        = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml             = "0.8"
rand             = "0.8"
dirs             = "5"
chrono           = { version = "0.4", features = ["serde"] }
webbrowser       = "0.8"
igd-next         = { version = "0.14", features = ["aio_tokio"] }

# zip handling for world download (compress save folder) and world
# upload (extract uploaded zip into saves dir).
zip              = { version = "0.6", default-features = false, features = ["deflate"] }

# Native file/folder pickers — backend chosen per-OS so the Linux build
# is more portable. On Linux we use the XDG Desktop Portal (DBus): no
# GTK build-time headers, works under any DE that ships portals, which
# means every modern desktop (GNOME, KDE, Sway, Hyprland, etc.).
[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd              = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
rfd              = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }

# Windows-only: embed the .ico into the .exe so the taskbar / Explorer
# shows our app icon.
[target.'cfg(windows)'.build-dependencies]
winres           = "0.1"

[profile.release]
opt-level = 3
lto       = true
strip     = true
